[COM-273] Fixed sideways scrolling when table is too large

--- a/less/admin.less
+++ b/less/admin.less
@@ -1,79 +1,68 @@
 .DismissedFlagsPage {
-  .DismissedFlagsPage-header {
-    background: @control-bg;
-    color: @control-color;
-    padding: 20px 0;
+  overflow-x: auto;
+}
 
-    .container {
-      max-width: 600px;
-    }
+.DismissedFlagsPage-header {
+  background: @control-bg;
+  color: @control-color;
+  padding: 20px 0;
 
-    h1 {
-      margin: 0;
-      margin-bottom: 20px;
-    }
+  .container {
+    max-width: 600px;
   }
 
-  .DismissedFlagsTable {
-    table {
-      white-space: nowrap;
-      width: 100%;
-      margin-left: 20px;
-      overflow: auto;
+  p {
+    margin-bottom: 20px;
+  }
 
-      td,
-      th {
-        padding: 5px;
-        text-align: left;
-        width: 16.6%;
-      }
+  .Button {
+    margin-right: 10px;
+  }
+}
 
-      td {
-        color: @muted-color;
-        word-wrap: break-word;
-        white-space: nowrap;
-        overflow: hidden;
-      }
+.DismissedFlagsPage-list {
+  padding-top: 20px;
 
-      thead th {
-        border-bottom: 2px solid @control-bg;
-        color: @muted-color;
-        font-size: 12px;
-        font-weight: bold;
-        min-width: 140px;
-        // text-align: center;
-        text-transform: uppercase;
-      }
+  .DismissedFlagsPage-results {
+    white-space: wrap;
+    width: 100%;
 
-      tbody {
-        tr {
+    td, th {
+      padding: 10px;
+      text-align: left;
+    }
 
-          td,
-          th {
-            border-top: 1px solid @control-bg;
+    thead th {
+      text-transform: uppercase;
+      font-weight: bold;
+      font-size: 12px;
+      color: @muted-color;
+      min-width: 140px;
+      border-bottom: 2px solid @control-bg;
+    }
 
-            &.TraitsTable-actions {
-              text-align: right;
+    tbody {
+      tr {
+        td, th {
+          border-top: 1px solid @control-bg;
+        }
 
-              .Button.hasIcon i {
-                margin-right: 0;
-              }
-            }
-          }
-
-          &:nth-of-type(odd) {
-            background-color: #fcfcfc;
-          }
+        &:nth-of-type(odd) {
+          background-color: #fcfcfc;
         }
       }
     }
-  }
 
-  .DismissedFlagsTable-user {
-    .Avatar {
-      .Avatar--size(24px);
-      vertical-align: middle;
-      margin-right: 5px;
+    .DismissedFlagsPage-results-actions {
+      text-align: right;
     }
+  }
+}
+
+.DismissedFlagsTable-user {
+  .Avatar {
+    .Avatar--size(24px);
+    vertical-align: middle;
+    margin-right: 5px;
   }
 }
